# flight-data-reader

./: Cargo.toml  LICENSE  README.md  data.csv  data_gen.rb  example_config.json  stats.rb
cli/: Cargo.toml  xenia-2-config.json
cli/src/: main.rs
src/: configuration.rs  csv.rs  data.rs  lib.rs  main.rs  report.rs  result_table.rs
src/configuration/: tests.rs
src/data/: tests.rs
src/report/: latex.rs
src/result_table/: tests.rs
web_package/rocket-data/: Cargo.toml  LICENSE_MIT
web_package/rocket-data/src/: lib.rs
