# Workspace settings
[workspace]
members = [
    ".",
    "cli"
]
exclude = ["web_package/rocket-data"]

[workspace.dependencies]
serde_json = "1.0.104"

[workspace.dependencies.serde]
version = "1.0.183"
features = ["derive"]

# Package settings
[package]
name = "flight_data_reader"
version = "1.0.0"
authors = [
    "Mateo Carreras <mateo.carreras@gmail.com>"
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }

[dependencies.serde]
workspace = true
